kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-webserver
  namespace: homework
  labels:
    app: otus-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-webserver
  template:
    metadata:
      labels:
        app: otus-webserver
    spec:
      containers:
        - name: nginx-otus
          image: oshormidis/otus_nginx:0.0.2
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/index.html"
              port: 8000
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5 && rm /homework/index.hml"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /homework
              name: minikube-storage
            - mountPath: /homework/conf
              name: configmap-storage
      volumes:
        - name: minikube-storage
          persistentVolumeClaim:
            claimName: otus-webserver-pvc
        - name: configmap-storage
          configMap:
            name: otus-webserver-env
