kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-webserver-svc
  namespace: homework
  labels:
    env: education
    app: otus-webserver
spec:
  selector:
    app: otus-webserver
  ports:
    - name: otus-webserver-listener
      protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
