kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-webserver-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otus-webserver-svc
                port:
                  number: 80
          - path: /homepage/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: otus-webserver-svc
                port:
                  number: 80
